# ROS-Gazebo-Detect-and-Pursue-Human-Invader

./: README.md
project3b/pursuit_evasion/: NOTES  pursuer_detections.perspective
project3b/pursuit_evasion/launch/: robot_amcl.launch  sim.launch  turtlebot3_teleop_key.launch
project3b/pursuit_evasion/launch/navigation/: detect_pursuer.launch  move_pursuer.launch  pursuit_evasion_demo.launch
project3b/pursuit_evasion/maps/: world0.pgm  world0.yaml  world1.pgm  world1.yaml
project3b/pursuit_evasion/rviz/: amcl.rviz
project3b/pursuit_evasion/scripts/: move_pursuer.py  pursuer_detector.py
project3b/pursuit_evasion_description/: CMakeLists.txt  package.xml
project3b/pursuit_evasion_description/urdf/: turtlebot3_burger_pursuer.gazebo.xacro  turtlebot3_burger_pursuer.urdf.xacro
turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
